# getareel

./: Cargo.toml  getareel.service
.github/workflows/: rust.yaml
src/: main.rs
